; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_hpilo.c_ilo_unmap_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_hpilo.c_ilo_unmap_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.ilo_hwinfo = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*, %struct.ilo_hwinfo*)* @ilo_unmap_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ilo_unmap_device(%struct.pci_dev* %0, %struct.ilo_hwinfo* %1) #0 {
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca %struct.ilo_hwinfo*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  store %struct.ilo_hwinfo* %1, %struct.ilo_hwinfo** %4, align 8
  %5 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %6 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %4, align 8
  %7 = getelementptr inbounds %struct.ilo_hwinfo, %struct.ilo_hwinfo* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @pci_iounmap(%struct.pci_dev* %5, i32 %8)
  %10 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %11 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %4, align 8
  %12 = getelementptr inbounds %struct.ilo_hwinfo, %struct.ilo_hwinfo* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @pci_iounmap(%struct.pci_dev* %10, i32 %13)
  %15 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %16 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %4, align 8
  %17 = getelementptr inbounds %struct.ilo_hwinfo, %struct.ilo_hwinfo* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @pci_iounmap(%struct.pci_dev* %15, i32 %18)
  ret void
}

declare dso_local i32 @pci_iounmap(%struct.pci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
